# chesschamp

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  DESIGN.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  play.bat  play.py  pyproject.toml  requirements-dev.txt  requirements.txt  serve.bat
.github/workflows/: ci.yml
chesscoach/: __init__.py  coach.py  config.py  engine.py  lesson.py  memory.py  rating.py  spend.py  summary.py  threats.py
scripts/: sim_calibration.py  smoke.py
static/: app.js  index.html  style.css
tests/: test_coach_salvage.py  test_engine_classify.py  test_lesson_patterns.py  test_rating.py  test_summary.py  test_threats.py
web/: app.py
